--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,12 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "server.js",
-            "use": "@vercel/node"
-        }
-    ],
+    "buildCommand": "npm install",
+    "outputDirectory": "",
+    "installCommand": "npm install",
+    "framework": "nodejs",
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/api/(.*)",
             "dest": "server.js"
         }
     ]
